--- a/P1001358_Ratul_Hasan_Ruhan_FitnessTracker.csproj
+++ b/P1001358_Ratul_Hasan_Ruhan_FitnessTracker.csproj
@@ -48,12 +48,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <ApplicationIcon>fitness.ico</ApplicationIcon>
   </PropertyGroup>
-  <PropertyGroup>
-    <NoWin32Manifest>true</NoWin32Manifest>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -111,6 +108,7 @@
   <ItemGroup>
     <Content Include="Assets\fitness.ico" />
     <Content Include="Assets\logo.png" />
+    <Content Include="fitness.ico" />
     <Content Include="main_db.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
